[project]
name = "meetily-exporter"
version = "0.1.0"
description = "Export Meetily meetings as markdown"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
meetily-exporter = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[dependency-groups]
dev = ["ruff>=0.15.0"]

[tool.ruff]
line-length = 100
